Rebase with AWS (#13)
* Merge branch 'main' of github.com:aws-amplify/amplify-android

* Merge branch 'main' of github.com:aws-amplify/amplify-android