@@ -24,6 +24,7 @@ import com.amplifyframework.predictions.aws.test.R;
 import com.amplifyframework.predictions.models.IdentifyActionType;
 import com.amplifyframework.predictions.result.IdentifyCelebritiesResult;
 import com.amplifyframework.testutils.Assets;
+import com.amplifyframework.testutils.DeviceFarmTestBase;
 import com.amplifyframework.testutils.sync.SynchronousAuth;
 import com.amplifyframework.testutils.sync.SynchronousPredictions;
 import com.amplifyframework.util.Empty;
@@ -31,7 +32,7 @@ import com.amplifyframework.util.Empty;
 import org.junit.Before;
 import org.junit.Test;
 
-import io.reactivex.rxjava3.core.Observable;
+import java.util.stream.Collectors;
 
 import static androidx.test.core.app.ApplicationProvider.getApplicationContext;
 import static org.junit.Assert.assertFalse;
@@ -42,7 +43,7 @@ import static org.junit.Assert.assertTrue;
  * Tests that Predictions identify delivers a non-null
  * celebrity detection result for valid input.
  */
-public final class AWSPredictionsIdentifyCelebritiesTest {
+public final class AWSPredictionsIdentifyCelebritiesTest extends DeviceFarmTestBase {
 
     private static final IdentifyActionType TYPE = IdentifyActionType.DETECT_CELEBRITIES;
 
@@ -79,10 +80,10 @@ public final class AWSPredictionsIdentifyCelebritiesTest {
 
         // Assert that Jeff Bezos is detected
         assertFalse(Empty.check(result.getCelebrities()));
-        assertTrue(Observable.fromIterable(result.getCelebrities())
-                .map(celeb -> celeb.getCelebrity().getName())
-                .toList()
-                .blockingGet()
-                .contains("Jeff Bezos"));
+        assertTrue(result.getCelebrities().stream()
+                       .map(celeb -> celeb.getCelebrity().getName())
+                       .collect(Collectors.toList())
+                       .contains("Jeff Bezos")
+        );
     }
 }
