@@ -27,6 +27,7 @@ import com.amplifyframework.predictions.models.Label;
 import com.amplifyframework.predictions.models.LabelType;
 import com.amplifyframework.predictions.result.IdentifyLabelsResult;
 import com.amplifyframework.testutils.Assets;
+import com.amplifyframework.testutils.DeviceFarmTestBase;
 import com.amplifyframework.testutils.sync.SynchronousAuth;
 import com.amplifyframework.testutils.sync.SynchronousPredictions;
 import com.amplifyframework.util.Empty;
@@ -34,7 +35,7 @@ import com.amplifyframework.util.Empty;
 import org.junit.Before;
 import org.junit.Test;
 
-import io.reactivex.rxjava3.core.Observable;
+import java.util.stream.Collectors;
 
 import static androidx.test.core.app.ApplicationProvider.getApplicationContext;
 import static org.junit.Assert.assertFalse;
@@ -45,7 +46,7 @@ import static org.junit.Assert.assertTrue;
  * Tests that Predictions identify delivers a non-null
  * label detection result for valid input.
  */
-public final class AWSPredictionsIdentifyLabelsTest {
+public final class AWSPredictionsIdentifyLabelsTest extends DeviceFarmTestBase {
 
     private SynchronousPredictions predictions;
 
@@ -96,10 +97,6 @@ public final class AWSPredictionsIdentifyLabelsTest {
 
         // Assert at least one label is detected as "Person"
         assertFalse(Empty.check(result.getLabels()));
-        assertTrue(Observable.fromIterable(result.getLabels())
-                .map(Label::getName)
-                .toList()
-                .blockingGet()
-                .contains("Person"));
+        assertTrue(result.getLabels().stream().map(Label::getName).collect(Collectors.toList()).contains("Person"));
     }
 }
